# api-mensagens

./: .env  .gitignore  README.md  api-mensagens.db  pyproject.toml  teste_diabolico.py
api_mensagens/: main.py
api_mensagens/api/v1/: auth.py  comment_routes.py  message_routes.py  user_routes.py
api_mensagens/core/: config.py  exceptions.py  security.py
api_mensagens/db/: session.py
api_mensagens/models/: comment.py  message.py  user.py
api_mensagens/schemas/: comment.py  message.py  token.py  user.py
api_mensagens/services/: auth_service.py  comment_service.py  error_handler_service.py  message_service.py  user_service.py
migrations/: env.py
migrations/versions/: 532945fad23f_merge_cargo_e_comments.py  5e99a386edc5_create_messages_table.py  9cd2b0b69943_changes_to_portuguese.py  a437a6da2771_adicionando_campo_cargo_para_coluna_.py  aea132d28c13_recreate_lost_migration.py  c4b2549a7433_lixos_curtidos.py  cf13c3dcde7a_mudando_campo_role_para_is_staff.py  d6defd69d902_aa.py  e42070465e10_atualizando_tabela_de_mensagens_de_.py  e5543882ab24_adds_title_field_to_message_and_changes_.py  f837ea56fb45_add_comments_table.py  fd69a2e2b676_atualizando_tabela_de_mensagens.py
src/api_mensagens/: main.py
src/api_mensagens/api/: deps.py
src/api_mensagens/api/v1/: message_routes.py
src/api_mensagens/core/: config.py
src/api_mensagens/db/: api-mensagens.sqlite3  init_db.py  session.py
src/api_mensagens/models/: message.py
src/api_mensagens/schemas/: message.py
src/api_mensagens/services/: message_service.py
tests/:  teste_simples.py  conftest.py  test_app.py  test_auth.py  test_comments.py  test_message.py  test_security.py  test_user.py  teste_não_tão_simples.py  teste_simples.py
