[project]
name = "api-mensagens"
version = "0.1.0"
description = ""
packages = [{include = 'api_mensagens'}]
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
    "tzdata (>=2025.2,<2026.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
pytest = "^8.4.0"
ruff = "^0.11.13"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev api_mensagens/main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=api_mensagens -vv'
post_test = 'coverage html'